# G.F_TechAid_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  REPORTING_IMPLEMENTATION_SUMMARY.md  SETUP_COMPLETE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run_dev.bat  test_api.bat  test_export_functionality.py  test_methods_exist.py  test_report.csv  test_report.xlsx  test_reporting_api.py  test_reporting_simple.py  光復e互助團隊規劃.docx  光復e互助團隊規劃.md  啟動說明.md
.kiro/specs/disaster-relief-platform/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 001_initial_database_schema.py  002_insert_initial_data.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/api_v1/: __init__.py  api.py
app/core/: config.py  database.py  exceptions.py  lifespan.py  redis.py  security.py
app/crud/: need.py  shelter.py  supply.py  task.py  user.py
app/dependencies/: auth.py
app/middleware/: auth.py  error_handler.py  logging.py
app/models/: __init__.py  base.py  need.py  supply.py  system.py  task.py  user.py
app/schemas/: __init__.py  announcement.py  auth.py  location.py  monitoring.py  need.py  notification.py  reporting.py  shelter.py  supply.py  task.py  user.py
app/services/: __init__.py  announcement_service.py  auth_service.py  location_service.py  monitoring_service.py  need_service.py  notification_service.py  organization_service.py  reporting_service.py  shelter_service.py  supply_service.py  task_service.py
app/utils/: constants.py  location_helpers.py  logging.py  response.py  validators.py
docs/: database_models.md  location_service.md
frontend/: .env.example  README.md  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json  offline.html  sw.js
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx
frontend/src/pages/: AnnouncementsPage.tsx  CreateNeedPage.tsx  CreateTaskPage.tsx  DashboardPage.tsx  LoginPage.tsx  NeedDetailPage.tsx  NeedsPage.tsx  (+8 more)
scripts/: init-db.sql  init_database.py  start.bat  start.sh  startup.py  test_database_models.py  verify_setup.py
tests/: __init__.py  conftest.py  test_announcement_api.py  test_announcement_service.py  test_auth.py  test_location_api.py  test_location_integration.py  test_location_service.py  test_main.py  test_models.py  test_monitoring_api.py  test_monitoring_service.py  test_need_api.py  test_need_crud.py  test_need_status_management.py  test_notification_api.py  test_notification_service.py  test_organization_approval.py  test_reporting_api_comprehensive.py  test_reporting_service.py  test_shelter_api.py  test_shelter_crud.py  test_shelter_service.py  test_supply_api.py  test_supply_crud.py  test_supply_reservation.py  test_supply_reservation_simple.py  test_task_api.py  test_task_approval.py  test_task_crud.py  test_task_simple.py  test_user_api.py  test_user_crud.py
(+38 files in other folders)
