[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disaster-relief-platform"
version = "0.1.0"
description = "花蓮光復鄉災害應變數位平台"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "災害救援平台開發團隊"},
]
keywords = ["disaster", "relief", "fastapi", "taiwan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # FastAPI 核心
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # 資料庫
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    
    # Redis
    "redis>=5.0.0",
    
    # 身分驗證與安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # 資料驗證
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.1.0",
    
    # HTTP 客戶端
    "httpx>=0.25.0",
    "requests>=2.31.0",
    
    # 工具庫
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    
    # 地理位置處理
    "geopy>=2.4.0",
    
    # 檔案處理
    "python-magic>=0.4.27",
    "pillow>=10.0.0",
    
    # 環境變數
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # 測試
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    
    # 程式碼品質
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    
    # 開發工具
    "pre-commit>=3.5.0",
]

gcp = [
    # Google Cloud Platform
    "google-cloud-storage>=2.10.0",
    "google-cloud-sql-connector>=1.4.0",
    "google-cloud-logging>=3.8.0",
    "google-cloud-monitoring>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/disaster-relief-platform"
Repository = "https://github.com/disaster-relief-platform.git"
Issues = "https://github.com/disaster-relief-platform/issues"

[tool.hatch.version]
path = "app/__init__.py"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]